# pg_pinyin

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  README.zh-CN.md  THIRD_PARTY_NOTICES.md  pg_pinyin--0.0.2--0.0.3.sql  pg_pinyin--0.0.2--0.1.0.sql  pg_pinyin--0.0.3--0.0.4.sql  pg_pinyin--0.0.4--0.0.5.sql  pg_pinyin.control  readme.md
.github/workflows/: ci.yml  release-model-packages.yml  release-packages.yml
docker/: Dockerfile.release-trixie  Dockerfile.test-pg19beta1-trixie  Dockerfile.test-trixie
scripts/: benchmark_g2pw_cpp.py  benchmark_g2pw_cpp.sh  benchmark_pg18.sh  benchmark_pinyin_regex_phrase.py  benchmark_pinyin_regex_search.py  docker_pg18_test_and_bench.sh  export_g2pm_assets.py  export_g2pm_assets.sh  generate_data.sh  generate_upgrade_sql.py  package_debs.sh  package_rpms.sh  test_upgrade_pg18.sh  verify_upgrade_sql.sh
scripts/data/: README.md  generate_extension_data.py
sql/: load_data.sql  pinyin.sql  word.sql
sql/data/: pinyin_mapping.csv  pinyin_words.csv
sql_patent/: pinyin.sql  pinyin_token.csv  test_pinyin.py
src/: lib.rs  pg_pinyin.control  regex_phrase.rs
test/pgtap/: 01_pinyin.sql  02_pg_pinyin_extension.sql  03_pinyin_regex_phrase.sql  run.sh
